# VPNWindows

./: .gitignore  README.md  diff_output.txt  download_engine.cjs  filters.xml  package.json  task.json
frontend/: account.html  founder.html  index.html  package-lock.json  package.json  styles.css  subscribe.html
frontend/legal/: privacy.html  terms.html
frontend/neravpn-site/: account.html  app.js  dashboard.html  index.html  styles.css  subscribe.html  success.html
server/: .gitignore  deploy-proxy.sh  fix-account.js  index.js  nera-obf-proxy.service  obfuscation-proxy.js  package-lock.json  package.json  port-forward.js
server/maintenance/: README.md  debug-vpn.js  diagnose-vpn.js  fix-vpn-traffic.js  fix-vpn.js  fix-wg-subnet.js  restore-and-fix-wg.js  validate-keys.sh
server/prisma/: schema.prisma  seed.js
server/utils/: keys.js
src/: App.svelte
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: crypto.rs  main.rs  split_tunnel.rs  stealth.rs  transport.rs  vpn.rs  wg_nt.rs
src-tauri/src/shield_zero/: blocklist.rs  dga.rs  dns_proxy.rs  mod.rs
src-tauri/src/split_tunnel_v2/: commands.rs  dns_resolver.rs  mod.rs  process_scanner.rs  route_manager.rs  types.rs  wfp_manager.rs
src/components/: Protection.svelte  RedeemToken.svelte  TitleBar.svelte
src/lib/: Globe.svelte  blindAuth.js  stores.js
