[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Windows API for Routing Table (GetBestRoute) and Admin Check
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48", features = [
    "Win32_NetworkManagement_IpHelper", 
    "Win32_Foundation", 
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
    # --- WFP Split Tunneling ---
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Security",
    "Win32_System_Rpc",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Tauri core with dialog + system tray enabled
tauri = { version = "2", features = ["image-png", "image-ico", "tray-icon"] }

# Autostart plugin (Rust side)
tauri-plugin-autostart = { version = "2" }

# NEW: for timestamps in the log
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"
base64 = "0.21"
sysinfo = "0.30"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
dirs = "5.0"
socket2 = "0.5"

# RSA Blind Signature Dependencies (Anonymous Token Auth)
rsa = "0.9"
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.10"
lazy_static = "1.4"
num-traits = "0.2"

# --- Phase 2.5: DPI Stealth Dependencies ---
tokio = { version = "1", features = ["full", "net", "io-util", "sync", "time"] }
ipnet = "2.9"
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
webpki-roots = "0.25"
async-trait = "0.1"
thiserror = "1.0"

# --- Split Tunneling (WFP/WinDivert) ---
windivert = { version = "0.6", features = ["vendored"] }
wireguard-nt = "0.5.0"
once_cell = "1.20.3"
log = "0.4.27"

# --- WFP Split Tunneling (New Architecture) ---
dashmap = "5.5"
uuid = { version = "1.8", features = ["v4"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
tracing = "0.1"
winreg = "0.52"  # Registry access for app enumeration

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag
# to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
